alignment fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,6 @@ body {
   @include desktop {
     display: flex;
     margin: auto 2rem;
+    align-items: center;
   }
 }
